# 2025W2-Commitment

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.render  OAUTH_SETUP.md  README.md  README.tailwind-colors.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  example_env_file.txt  init-db.sh  mongo-init.js  package-lock.json  package.json  pull_request_template.md  render.yaml  render.yml  sample_config.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  deployment.yml  main.yml  nectar_deploy.yml  pr-checks.yml  release.yml
api/: CHANGELOG.md  Dockerfile.haskell  README.md  commitment-api.cabal  stack.yaml
api/src/: Api.hs  Command.hs  Commitment.hs  GitCommands.hs  Main.hs  Parsing.hs  Test.hs  Threading.hs  Types.hs  api.hs  command.hs  commitment.hs  gitcommands.hs  threading.hs  types.hs
commitment/: .babelrc  .dockerignore  .eslintrc.json  .gitignore  ARCHITECTURE.md  Dockerfile.MeteorDev  Dockerfile.MeteorProd  Dockerfile.MeteorRun  Dockerfile.MeteorTesting  Dockerfile.meteor  components.json  meteor.config.js  package-lock.json  package.json  settings.json  tailwind.config.js  tsconfig.json
commitment/.meteor/: .id  (+2 more)
docs/: ATLAS_SETUP.md  CODING_STANDARDS.md  DEPLOYMENT.md  ESLINT.md  MAINTENANCE.md  MAINTENANCE_PLAN.md  README.md  coding-standards.md
python_executor/: Dockerfile  default.nix  fhs.nix  python_executor.py  seccomp-bwrap.json  shell.nix  test.py  wrap.nix  wrap.sh
(+358 files in other folders)
