cabal-version:       2.2

name:                commitment-api
version:             0.1.0.0
homepage:            https://github.com/githubuser/commitment-api#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable commitment-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
      Api
      Commitment
      Parsing
      GitCommands
      Command
      Types
      Threading
  build-depends:
      base >= 4.7 && < 5,
      wai,
      warp,
      aeson,
      text,
      bytestring,
      async,
      http-types,
      wai-extra,
      containers,
      time,
      stm,
      process,
      directory,
      filepath,
      unix-compat,
      deepseq
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
